--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,6 @@ on:
 
 env:
   LOG_LEVEL: debug
-  RENOVATE_VBERSION: 24.32.0 #renovate: datasource=npm depName=renovate
 
 jobs:
   preset:
@@ -24,4 +23,4 @@ jobs:
       - uses: actions/checkout@v2.3.4
 
       - name: testing ${{ matrix.file }}
-        run: npx -p renovate@${{ env.RENOVATE_VBERSION }} renovate-config-validator
+        run: npx -p renovate renovate-config-validator
