--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   LOG_LEVEL: debug
+  RENOVATE_VERSION: 37.76.1 # renovate: datasource=npm depName=renovate
 
 jobs:
   preset:
@@ -24,4 +25,17 @@ jobs:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
 
       - name: testing ${{ matrix.file }}
-        run: npx -p renovate renovate-config-validator
+        run: npx -p renovate@${{env.RENOVATE_VERSION}} renovate-config-validator
+
+  preset-success:
+    runs-on: ubuntu-latest
+    needs: 
+      - preset
+    timeout-minutes: 1
+    if: always()
+    steps:
+      - name: Fail for failed or cancelled presets
+        if: |
+          needs.test.result == 'failure' ||
+          needs.test.result == 'cancelled'
+        run: exit 1
