ci: test merge-queue preset

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
         file:
           - default
           - renovate-config
+          - merge-queue
     env:
       RENOVATE_CONFIG_FILE: ${{ matrix.file }}.json
 
