--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,46 @@ on:
   push:
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   LOG_LEVEL: debug
-  RENOVATE_VERSION: 38.142.6 # renovate: datasource=npm depName=renovate
+
+permissions:
+  contents: read
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          show-progress: false
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+        with:
+          standalone: true
+
+      - name: Setup Node
+        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
+        with:
+          node-version-file: .node-version
+          cache: pnpm
+
+      - run: pnpm install
+      - run: pnpm prettier
+
   preset:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    container:
+      image: ghcr.io/renovatebot/renovate:38.142.5@sha256:cd3fca30ca12ff9abf3bfc444dc5e5d6ccb876ac8def26a757e2e01c17900627
+      # github hosted runners are running as `1001:127` (ubuntu:docker)
+      options: -u 1001:0 --group-add 1000 --group-add 12021 --group-add 127
 
     strategy:
       matrix:
@@ -19,19 +51,21 @@ jobs:
           - default
           - renovate-config
           - merge-queue
-    env:
-      RENOVATE_CONFIG_FILE: ${{ matrix.file }}.json
+          - .github/renovate
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          show-progress: false
 
       - name: testing ${{ matrix.file }}
-        run: npx -p renovate@${{env.RENOVATE_VERSION}} renovate-config-validator
+        run: renovate-config-validator ${{ matrix.file }}.json
 
   preset-success:
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - preset
+      - lint
     timeout-minutes: 1
     if: always()
     steps:
