--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "packageManager": "pnpm@9.15.9",
   "engines": {
-    "node": "^22.11.0",
+    "node": "^22.11.0 || >=24.10.0",
     "pnpm": "^9.0.0"
   }
 }
