--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,8 +69,13 @@ jobs:
     timeout-minutes: 1
     if: always()
     steps:
-      - name: Fail for failed or cancelled presets
+      - name: Fail for failed or skipped lint
         if: |
-          needs.test.result == 'failure' ||
-          needs.test.result == 'cancelled'
+          needs.lint.result == 'failure' ||
+          needs.lint.result == 'skipped'
+        run: exit 1
+      - name: Fail for failed or skipped presets
+        if: |
+          needs.preset.result == 'failure' ||
+          needs.preset.result == 'skipped'
         run: exit 1
